Make use of GtkFileChooserNative instead of GtkFileChooser
GTranslator 3.36.0 from Flathub.
Pretty much every action that uses a file chooser/saver doesn't have access to my bookmarks. This means it doesn't use GtkFileChooserNative and so can't use the flatpak's portal file chooser/saver. This means it gets difficult to access my "translations" folder to save or open the translations.
Edited by Vanadiae